--- a/_sass/layouts/_blog.scss
+++ b/_sass/layouts/_blog.scss
@@ -50,7 +50,7 @@
     margin-bottom: 0;
     display: inline-block;
     background-size: cover;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    /*border-bottom: 1px solid rgba(0, 0, 0, 0.1);*/
 
     p a {
       @extend .body-link;
@@ -58,7 +58,7 @@
 
     .post-img {
       vertical-align: middle;
-      border-radius: 10px;
+      border-radius: 3px;
       overflow: hidden;
 
       @media (min-width: $break) {
