--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -91,7 +91,7 @@ html[data-theme="dark"] {
 html, html[data-theme="light"] {
   --background: #ffffff;
   --blockquote: #eef7fa;
-  --selection: #d4d4d4;
+  --selection: #76167d8c;
   --meta: #595959;
   --link: #337ab7;
   --header-background: #24292e;
@@ -113,7 +113,7 @@ html, html[data-theme="light"] {
 html[data-theme="dark"] {
   --background: #22272e; // brand, background
   --blockquote: #373e47; // blockquote
-  --selection: #545d68; // selection
+  --selection: #cf00e0; // selection
   --meta: #909dab; // meta
   --link: #00a8e0; // theme, link, link shadow header bg
   --header-background: #2A3444; // Color before header image load
