--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,16 +26,22 @@ layout: default
   <!-- Social media shares -->
   {% include social/share_buttons.html %}
 
+
    <!-- Tag list -->
   {% capture tag_list %}{{ page.tags | join: "|"}}{% endcapture %}
   {% include default/tags_list.html tags=tag_list %}
 
+  <!-- MailChimp Signup Form -->
+  {% include mailchimp_signup_form.html %}
+  
 </article>
+
 
 <!-- Post navigation -->
 {% if site.post_navigation  or site.theme_settings.post_navigation %}
 {% include blog/post_nav.html %}
 {% endif %}
+
 
 <!--Utterances-->
 {% if site.comments.utterances.repo and site.comments.utterances.issue-term and site.comments.utterances.theme %} {% include social/utterances.html %} {% endif %}
