--- a/_sass/external/_reset.scss
+++ b/_sass/external/_reset.scss
@@ -257,6 +257,9 @@ textarea {
   color: inherit; /* 1 */
   font: inherit; /* 2 */
   margin: 0; /* 3 */
+  border-radius: 0.3em;
+  border: 1px solid;
+  padding: 0.5em 0.7em;
 }
 
 /**
