--- a/_includes/mailchimp_signup_form.html
+++ b/_includes/mailchimp_signup_form.html
@@ -2,8 +2,7 @@
 <div id="mc_embed_signup">
 <form style="text-align: center;" action="https://whtaguy.us6.list-manage.com/subscribe/post?u=03f931d72dcbaa2862ddc9378&amp;id=492c106772" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-  <label for="mce-EMAIL" style="display: block;">Subscribe to get more updates from me (I will never send you spam)</label>
-  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="enter your email to subscribe" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_03f931d72dcbaa2862ddc9378_492c106772" tabindex="-1" value=""></div>
     <div class="clear" style="display: inline-block;"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
