--- a/_includes/blog/blog.html
+++ b/_includes/blog/blog.html
@@ -18,7 +18,7 @@
                     </a>
                 </div>
                 {% endif %}
-            {% include blog/post_info.html author=post.author date=post.date %}
+            <!-- {% include blog/post_info.html author=post.author date=post.date %} -->
           </header>
           {% if site.excerpt or site.theme_settings.excerpt %}
               <div class="excerpt">
