--- a/_includes/mailchimp_signup_form.html
+++ b/_includes/mailchimp_signup_form.html
@@ -1,6 +1,12 @@
 <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
 <form style="text-align: center;" action="https://whtaguy.us6.list-manage.com/subscribe/post?u=03f931d72dcbaa2862ddc9378&amp;id=492c106772" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+{% if hidetext != "true" %}
+  <p style="margin-bottom: 0;">No spam, ever. Unsubscribe any time.</p>
+{% endif %}
+
+
     <div id="mc_embed_signup_scroll">
   <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="enter your email to subscribe" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
