--- a/_includes/mailchimp_signup_form.html
+++ b/_includes/mailchimp_signup_form.html
@@ -8,7 +8,7 @@
 
 
     <div id="mc_embed_signup_scroll">
-  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="enter your email to subscribe" required>
+  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="example@example.com" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_03f931d72dcbaa2862ddc9378_492c106772" tabindex="-1" value=""></div>
     <div class="clear" style="display: inline-block;"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
